kubernetes/installation/manual/sample/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locthp-testflask
  namespace: myapp
  labels:
    app: testflask
spec:
  replicas: 3
  selector:
    matchLabels:
      app: testflask
  template:
    metadata:
      labels:
        app: testflask
    spec:
      containers:
      - name: testflask
        image: locthp/test-flask:v1.0.0
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: test-flask
  namespace: myapp
spec:
  selector:
    app: testflask
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
