kubernetes/installation/manual/sample/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testing
spec:
  rules:
  - host: testing.locthp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-flask
            port:
              number: 80
